<resources>
    <string name="app_name">Astolfo</string>

    <string name="menu_search">搜索</string>

    <string name="calendar">每日放送</string>
    <string name="rank">排行榜</string>
    <string name="anime_tag">动画标签</string>
    <string name="character_summary">角色介绍</string>
    <string name="character_info">角色资料</string>
    <string name="more_info">更多资料</string>
    <string name="related_entry">相关条目</string>
    <string name="guess_like">猜你喜欢</string>
    <string name="comment_box">吐槽箱</string>
    <string name="more_comment">更多吐槽</string>
    <string name="summary">简介</string>
    <string name="film_info">影片信息</string>
    <string name="search_history">搜索历史</string>
    <string name="clear_history">清除历史</string>

    <string name="favorite">收藏</string>
    <string name="subscription">追番</string>
    <string name="anime_subscription">新番订阅</string>
    <string name="anime_favorite">番剧收藏</string>
    <string name="settings">设置</string>
    <string name="notification">通知</string>
    <string name="anime_notification">新番提醒</string>
    <string name="help">帮助</string>
    <string name="about">关于Astolfo</string>
    <string name="license">开源许可证</string>

    <string name="astolfo_domain">Astolfo主页：arturia.cc</string>
    <string name="astolfo_developer">开发者：Arturia</string>
</resources>
