<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_accent"
        android:fitsSystemWindows="true"
        app:navigationIcon="@drawable/ic_back_embed"
        app:popupTheme="@style/OverflowMenu"
        app:theme="@style/Astolfo.Theme.TextAppearance.Toolbar"
        app:title="@string/about"
        app:titleTextAppearance="@style/Astolfo.Theme.TextAppearance.Toolbar.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@null"
            android:src="@mipmap/ic_astolfo" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/color_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="4dp"
        android:lines="1"
        android:text="@string/astolfo_domain"
        android:textColor="@color/color_content" />

    <TextView
        android:id="@+id/tv_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="4dp"
        android:lines="1"
        android:text="@string/astolfo_developer"
        android:textColor="@color/color_content" />
</LinearLayout>