<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/header_nav" />

            <LinearLayout
                android:id="@+id/layout_subscription"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_subscription" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/anime_subscription"
                    android:textColor="@color/color_content" />

                <TextView
                    android:id="@+id/tv_update_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_red_point"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/astolfo.text.small"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_favorite"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_favorite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/anime_favorite"
                    android:textColor="@color/color_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_settings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/bg_ripple"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_settings" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/settings"
                    android:textColor="@color/color_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>